[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["1twalters01 <1twalters01>"]

[tool.poetry.scripts]
run = "src.__main__:app"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^24.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
