[package]
name = "rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.5.1"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
futures = "0.3"
actix-files = "0.6.5"
async-stream = "0.3.5"
bytes = "1.5.0"
